--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.3",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.19.0",
+    "facebook-nodejs-business-sdk": "^24.0.1",
     "framer-motion": "^12.34.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.9.3",
